# Cobalt.Ed

./: .clippy.toml  Cargo.toml
.github/: renovate.json5
.github/workflows/: ci.yml  post-release.yml
crates/config/: Cargo.toml
