[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/cobalt.rs"
edition = "2021"
rust-version = "1.70.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "cobalt-bin"
version = "0.19.0"
description = "Static site generator written in Rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["static", "site", "generator"]
license = "MIT"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    ".gitignore",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "release.toml",
    "typos.toml",
    "committed.toml",
    "docs/**",
    ".github/**",
    "tests/**",
    "benches/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/cobalt-org/cobalt.rs/compare/{{tag_name}}...HEAD", exactly=1},
]

[lib]
name="cobalt"

[[bin]]
name = "cobalt"
doc = false

[dependencies]
cobalt-config = { version = "=0.19.0", path = "crates/config", features = ["unstable"] }
cobalt-core = { version = "=0.19.0", path = "crates/core", features = ["unstable"] }
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.2.0"
proc-exit = "2.0.1"
yansi = "0.5.1"
colorchoice = "1.0.1"
colorchoice-clap = "1.0.4"
human-panic = "1.2.3"
scrawl = "2.0"
tempfile = "3.10.1"
relative-path = { version = "1.9.3", features = ["serde"] }
liquid = "0.26.4"
liquid-core = "0.26.4"
liquid-lib = { version = "0.26.4", features = ["jekyll", "shopify", "extra"] }
deunicode = "1.4.4"
walkdir = "2.5.0"
time = "0.3.36"
log = "0.4.21"
env_logger = "0.10"
rss = "2.0.7"
jsonfeed = "0.2"
pulldown-cmark = {version="0.9", default-features = false}
engarde = { version = "0.1", path = "crates/engarde" }
regex = "1.10.4"
lazy_static = "1.4"
itertools = "0.11"
ignore = "0.4.22"
serde = "1.0.200"
serde_yaml = "0.9.34"
serde_json = "1.0.116"
toml = "0.7.6"
normalize-line-endings = "0.3.0"
sitemap = "0.4.1"
open = "5.1.2"
dunce = "1.0.4"

file-serve = { version = "0.3.0", path = "crates/file-serve", optional = true }
notify = { version = "6.1.1", optional = true, default-features = false, features = ["macos_fsevent"] }

sass-rs = { version = "0.2.2", optional = true }

html-minifier = {version="3.0.15", optional = true }
anyhow = "1.0.82"
anstream = "0.5.0"
chrono = "0.4.38"

[dev-dependencies]
trycmd = "0.14"
snapbox = { version = "0.4.12", features = ["diff"] }

[features]
default = ["syntax-highlight", "sass", "serve", "html-minifier"]
unstable = []
preview_unstable = ["cobalt-config/preview_unstable"]

serve = ["file-serve", "notify"]
syntax-highlight = ["engarde/syntax"]
sass = ['sass-rs']

[profile.release]
lto = "thin"
panic = "abort"
