[package]
name = "cobalt-config"
version = "0.19.0"
description = "Static site generator written in Rust"
readme = "../../README.md"
keywords = ["static", "site", "generator"]
categories = ["command-line-utilities"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
unstable = []
preview_unstable = []

[dependencies]
liquid-core = "0.26.4"
time = "0.3.36"
log = "0.4.21"
regex = "1.10.4"
serde = "1.0.200"
serde_yaml = "0.9.34"
relative-path = { version = "1.9.3", features = ["serde"] }
once_cell = "1.19.0"
status = { version = "0.0.10", features = ["send_sync"] }
deunicode = "1.4.4"
itertools = "0.11"
